# OpenGLRender

./: CMakeLists.txt
src/: main.cpp
src/core/: camera.cpp  camera.h  hdr.h  material.h  mesh.cpp  mesh.h  renderer.h  scene.h  texture.cpp  texture.h
